src/test/deca/codegen/invalid/includefile2.deca
// Description:
//    include circulaire
//
// Resultats: erreur
//
// Historique:
//    cree le 23/01/2022

{
    #include "includefile1.deca" ;
}